# TrinityTrack6000

./: .gitignore  LICENSE  README.md
MatlabScripts/: DC_Motor_Gearbox_Selection.m  DC_Motor_Selection.m
Media/: STM32G473_RAM_MAP.drawio  Systems_Architecture.drawio
STM32/.metadata/: .log4j2.xml  version.ini
STM32/.metadata/.plugins/org.eclipse.cdt.core/: CMAKE_ARM.1756824420494.pdom  CMAKE_ARM.language.settings.xml  STM32L476RGT6.language.settings.xml
STM32/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
STM32/.metadata/.plugins/org.eclipse.core.resources/: 15.snap  16.snap  20.snap
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/: .location  .markers  .markers.snap
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/: history.index  properties.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/30/: history.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/91/: history.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/af/: history.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/bf/a3/: history.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/bf/be/: history.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/bf/c4/: history.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.projects/STM32L476RGT6/.indexes/c4/: history.index
STM32/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  15.tree  16.tree  20.tree  23.tree
STM32/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
STM32/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
STM32/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
STM32/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2025/9/36/: refactorings.history  refactorings.index
STM32/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/STM32L476RGT6/2025/8/36/: refactorings.history  refactorings.index
STM32/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
STM32/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
STM32/STM32L476RGT6/: .cproject  .project  CMakeLists.txt  CMakeLists_backup.txt  STM32L476RGT6 Debug.launch  STM32L476RGT6 Release.launch  STM32L476RGT6.ioc  STM32L476RGT6_CMakeBuild.launch  STM32L476RGTX_FLASH.ld
STM32/STM32L476RGT6/Core/Src/: main.c  sysmem.c
STM32/STM32L476RGT6/Debug/: STM32L476RGT6.elf  STM32L476RGT6.list  STM32L476RGT6.map  makefile  objects.list  sources.mk
STM32/STM32L476RGT6/Debug/Core/Src/: main.cyclo  main.su
STM32/STM32L476RGT6/Debug/Utils/: mem_info.cyclo  mem_info.d  mem_info.su  subdir.mk
STM32/STM32L476RGT6/Include/: TrinityTrack6000_Config.h
STM32/STM32L476RGT6/Init/: TrinityTrack6000_Init.c  TrinityTrack6000_Init.h
STM32/STM32L476RGT6/Src/: TrinityTrack6000_Config.c  main.c
STM32/STM32L476RGT6/Utils/: TrinityTrack6000_Errors.c  TrinityTrack6000_Errors.h  TrinityTrack6000_MemInfo.c  TrinityTrack6000_MemInfo.h  mem_info.c
